# Design_Patterns_in_cpp

Abstract_Factory/: EmployeeDAO_AbstractFactory.hpp  EmployeeDAO_factory.hpp  EmployeeDAO_original.hpp  Employee_factory.hpp
Adapter/: CMakeLists.txt  Peg.hpp  RoundHole.hpp  RoundPeg.hpp  SquarePeg.hpp  SquarePegAdapter.hpp  main.cpp
Bridge/: AdvancedRemote.hpp  CMakeLists.txt  Device.hpp  Radio.hpp  Remote.hpp  Television.hpp  main.cpp
Builder/: CMakeLists.txt  House.hpp  House_original.hpp  main.cpp
Chain_of_Responsibility/: AbstractHandler.hpp  CMakeLists.txt  ClientCode.hpp  DogHandler.hpp  IHandler.hpp  MonkeyHandler.hpp  Request.hpp  SquirrelHandler.hpp  main.cpp
Command/: CMakeLists.txt  Command_echo.hpp  Command_jumbo.hpp  ICommand.hpp  Invoker.hpp  Recevier.hpp  main.cpp
Composite/: CMakeLists.txt  Circle.hpp  CompoundGraphic.hpp  Dot.hpp  IGraphic.hpp  main.cpp
Decorator/: CMakeLists.txt  DataSource.hpp  DataSourceDecorator.hpp  DataSource_original.hpp  EncryptionDecorator.hpp  FileDataSource.hpp  main.cpp
Facade/: CMakeLists.txt  FrameworkLib.hpp  VideoConverter.hpp  main.cpp
Factory_Method/: CMakeLists.txt  Delivery.hpp  Delivery_old.hpp  Transport.hpp  TransportFactory.hpp  main.cpp
Flyweight/: CMakeLists.txt  Forest.hpp  Tree.hpp  TreeType.hpp  TreeTypeFactory.hpp  main.cpp
Iterator/: CMakeLists.txt  Integers.hpp  main.cpp
Mediator/: CMakeLists.txt  ClientCode.hpp  (+6 more)
Visitor/: CMakeLists.txt  ConcreteComponentA.hpp  ConcreteComponentB.hpp  ConcreteVisitor1.hpp  ConcreteVisitor2.hpp  IComponent.hpp  IVisitor.hpp  clientCode.hpp  main.cpp
(+48 files in other folders)
